// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser for loops accepts a 'step' clause 1`] = `
Array [
  For {
    "body": Block {
      "statements": Array [],
    },
    "counterDeclaration": Assignment {
      "name": Object {
        "isReserved": false,
        "kind": 21,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "i",
      },
      "value": Literal {
        "value": Int32 {
          "kind": 3,
          "value": 0,
        },
      },
    },
    "finalValue": Literal {
      "value": Int32 {
        "kind": 3,
        "value": 5,
      },
    },
    "increment": Literal {
      "value": Int32 {
        "kind": 3,
        "value": 2,
      },
    },
  },
]
`;

exports[`parser for loops allows 'next' to terminate loop 1`] = `
Array [
  For {
    "body": Block {
      "statements": Array [],
    },
    "counterDeclaration": Assignment {
      "name": Object {
        "isReserved": false,
        "kind": 21,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "i",
      },
      "value": Literal {
        "value": Int32 {
          "kind": 3,
          "value": 0,
        },
      },
    },
    "finalValue": Literal {
      "value": Int32 {
        "kind": 3,
        "value": 5,
      },
    },
    "increment": Literal {
      "value": Int32 {
        "kind": 3,
        "value": 1,
      },
    },
  },
]
`;

exports[`parser for loops defaults a missing 'step' clause to '1' 1`] = `
Array [
  For {
    "body": Block {
      "statements": Array [],
    },
    "counterDeclaration": Assignment {
      "name": Object {
        "isReserved": false,
        "kind": 21,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "i",
      },
      "value": Literal {
        "value": Int32 {
          "kind": 3,
          "value": 0,
        },
      },
    },
    "finalValue": Literal {
      "value": Int32 {
        "kind": 3,
        "value": 5,
      },
    },
    "increment": Literal {
      "value": Int32 {
        "kind": 3,
        "value": 1,
      },
    },
  },
]
`;
